# infinitetrak

./: Cargo.toml  README.md  demo_pattern.json
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/audio/: channel.rs  engine.rs  mod.rs  render.rs  voice.rs
src/core/: instrument.rs  io.rs  mod.rs  pattern.rs  state.rs
src/ui/: app.rs  input.rs  mod.rs  view.rs
