[package]
name = "infinitrak"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
infinitedsp-core = "0.2.0"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
